--- a/src/app/components/chatForm/chatForm.html
+++ b/src/app/components/chatForm/chatForm.html
@@ -2,27 +2,25 @@
     <form #inputForm="ngForm" (ngSubmit)="formSubmitted()">
 
         <!--hier wird die frage eingegeben-->
-        <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search for..."/>
-              <span class="input-group-btn">
+        <textarea class="form-control" rows="5" placeholder="Wie können wir Ihnen helfen?" required
+                  [(ngModel)]="text"></textarea>
+        <span class="input-group-btn">
                 <!--das ist der abschicken button-->
-                <button class="btn btn-default" type="button">Senden!</button>
-              </span>
-        </div>
+            <button class="btn btn-primary" type="submit" [disabled]="hasAsked">Abschicken!</button>
+        </span>
 
-
-        <div id="responseWrapper" style="font-weight: bold">
-            <!--wenn die frage abgeschickt wurde, läuft eine warte-animation-->
-            <div id="wait" *ngIf="true">
-                Antwortet
-                ...
-            </div>
-            <!--todo david-->
-            <!--wenn die frage angekommen ist, wird die warteanimation durch den text ersetzt-->
-            <div id="answered" *ngIf="false">
-                <!--todo david-->
-                Die Antwort ist : Hans.
-            </div>
-        </div>
     </form>
+
+    <div id="responseWrapper" style="font-weight: bold">
+        <!--wenn die frage abgeschickt wurde, läuft eine warte-animation-->
+        <div id="wait" *ngIf="!questionAnswered">
+            {{ answer }}
+        </div>
+        <!--todo david-->
+        <!--wenn die frage angekommen ist, wird die warteanimation durch den text ersetzt-->
+        <div id="answered" *ngIf="questionAnswered">
+            <!--todo david-->
+            {{ answer }}
+        </div>
+    </div>
 </div>
