--- a/src/app/components/chatForm/chatForm.html
+++ b/src/app/components/chatForm/chatForm.html
@@ -1,4 +1,4 @@
-<div>
+<div style="width:100%">
     <form #inputForm="ngForm" (ngSubmit)="formSubmitted()">
 
         <!--hier wird die frage eingegeben-->
