--- a/src/app/components/chatForm/chatForm.html
+++ b/src/app/components/chatForm/chatForm.html
@@ -1,6 +1,6 @@
 <div>
     <form #inputForm="ngForm" (ngSubmit)="formSubmitted()">
-        <input title="Text" type="text" placeholder="Bitte Nachricht eingeben..." [(ngModel)]="text">
-        <button type="submit">Senden</button>
+        <input title="Text" type="text" placeholder="Please insert your question to our team..." [(ngModel)]="text">
+        <button type="submit">Send</button>
     </form>
 </div>
