--- a/src/app/components/chatForm/chatForm.html
+++ b/src/app/components/chatForm/chatForm.html
@@ -8,7 +8,7 @@
 
             <br/>
             <!--das ist der abschicken button-->
-            <button class="btn btn-primary" type="submit" [disabled]="hasAsked">Submit your question!</button>
+            <button class="btn btn-primary" type="submit" [disabled]="!questionAnswered">Submit your question!</button>
 
         </form>
 
